objects/Station__c.object
<CustomObject>
    <fields>
        <fullName>AA_HH__c</fullName>
        <formula>Market__r.AA_HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AA HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affiliate_Owner__c</fullName>
        <label>Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gannett</fullName>
                </value>
                <value>
                    <fullName>PMCM TV, LLC</fullName>
                </value>
                <value>
                    <fullName>Tribune</fullName>
                </value>
                <value>
                    <fullName>Raycom</fullName>
                </value>
                <value>
                    <fullName>Media General</fullName>
                </value>
                <value>
                    <fullName>Hearst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bounce Raycom</fullName>
                </value>
                <value>
                    <fullName>Entertainment Raycom</fullName>
                </value>
                <value>
                    <fullName>Tribune Unwired</fullName>
                </value>
                <value>
                    <fullName>Media General Connect</fullName>
                </value>
                <value>
                    <fullName>Hearst Unwired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>Call Letters</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Channel_Position__c</fullName>
        <label>Channel Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.2</fullName>
                </value>
                <value>
                    <fullName>0.3</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Rank__c</fullName>
        <formula>Market__r.Market_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AntennaTV</fullName>
                </value>
                <value>
                    <fullName>BounceTV</fullName>
                </value>
                <value>
                    <fullName>Live Well</fullName>
                </value>
                <value>
                    <fullName>MeTV</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>ThisTV</fullName>
                </value>
                <value>
                    <fullName>AccuWeather</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>CW+</fullName>
                </value>
                <value>
                    <fullName>MyNetwork</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>COZI</fullName>
                </value>
                <value>
                    <fullName>WxNow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Station_Call_Letters__c</fullName>
        <formula>Primary_Station__r.Call_Letters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Primary Station Call Letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Primary Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>Market__r.DMA_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Station_Count__c</fullName>
        <description>Station Count Field used for calculations</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Station Count Field used for calculations</inlineHelpText>
        <label>Station Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tribune_Tier__c</fullName>
        <description>Can be used for multiple networks not just tribune</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_HH__c</fullName>
        <formula>Market__r.US_HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Station</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Call_Letters__c</columns>
        <columns>Market__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>Affiliate__c</columns>
        <columns>NAME</columns>
        <columns>Network__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Letters__c</field>
            <operation>contains</operation>
            <value>KHBS</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bounce_Raycom</fullName>
        <columns>Market_Rank__c</columns>
        <columns>Call_Letters__c</columns>
        <columns>Market__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>Affiliate__c</columns>
        <columns>NAME</columns>
        <columns>Tribune_Tier__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bundle__c</field>
            <operation>equals</operation>
            <value>Bounce Raycom</value>
        </filters>
        <label>Bounce Raycom</label>
    </listViews>
    <listViews>
        <fullName>Media_General</fullName>
        <columns>Call_Letters__c</columns>
        <columns>Market__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>Affiliate__c</columns>
        <columns>NAME</columns>
        <columns>Market_Rank__c</columns>
        <columns>Network__c</columns>
        <columns>Tribune_Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bundle__c</field>
            <operation>includes</operation>
            <value>Media General Connect</value>
        </filters>
        <label>Media General</label>
    </listViews>
    <listViews>
        <fullName>Tribune_Unwired</fullName>
        <columns>Market_Rank__c</columns>
        <columns>Call_Letters__c</columns>
        <columns>Market__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>Affiliate__c</columns>
        <columns>NAME</columns>
        <columns>Tribune_Tier__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bundle__c</field>
            <operation>equals</operation>
            <value>Tribune Unwired</value>
        </filters>
        <label>Tribune Unwired</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Station Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>